add svg's and more flex for icons in bottom page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="maincontent">
 
             <section class="hero">
-                <div class="container">
+                <div class="container hero__container">
                     <header class="header">
                         <img src="./img/logo.png" alt="choco logo" class="logo">
                         <nav class="menu">
@@ -45,13 +45,13 @@
                         <ul class="features">
                             <li class="features__item feature">
                                 <div class="feature__icon">
-                                    <img src="./img/icons/sound.svg" alt="leaf icon">
+                                    <img src="./img/icons/ear.svg" alt="leaf icon">
                                 </div>
                                 <div class="feature__text">100% rkfdd</div>
                             </li>
                             <li class="features__item feature">
                                 <div class="feature__icon">
-                                    <img src="./img/icons/capacity.svg" alt="leaf icon">
+                                    <img src="./img/icons/battery.svg" alt="leaf icon">
                                 </div>
                                 <div class="feature__text">100% rkfdd</div>
                             </li>
