fix font url's, fix flexable menu__item in scss

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                                 <div class="feature__icon">
                                     <img src="./img/icons/ear.svg" alt="leaf icon">
                                 </div>
-                                <div class="feature__text">100% rkfdd</div>
+                                <div class="feature__text">Безупречный звук</div>
                             </li>
                             <li class="features__item feature">
                                 <div class="feature__icon">
                                     <img src="./img/icons/battery.svg" alt="leaf icon">
                                 </div>
-                                <div class="feature__text">100% rkfdd</div>
+                                <div class="feature__text">До 40 часов работы</div>
                             </li>
                             <li class="features__item feature">
                                 <div class="feature__icon">
                                     <img src="./img/icons/fastchrg.svg" alt="leaf icon">
                                 </div>
-                                <div class="feature__text">100% rkfdd</div>
+                                <div class="feature__text">Технология Fast Fuel  </div>
                             </li>
                         </ul>
 
