--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1000">
-    <title>Шоколадкин магазин</title>
+    <title>Beats Store</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 
