--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <h1 class="hero__main-title">Беспроводные наушники Beats Solo 3</h1>
                         <div class="hero__title-desc">Встречайте новую версию наушников
                             из линейки Powerbeats.</div>
-                        <a href="#" class="btn btn--theme--whtie">Заказать</a>
+                        <a href="#" class="btn btn--theme--red">Заказать</a>
                     </div>
                     <div class="hero__icons-section">
                         <ul class="features">
