added new plank in bottom page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     </div>
                 </div>
             </section>
+            <div style="height: 600px"></div>
         </div>
     </div>
 </body>
