--- a/index.html
+++ b/index.html
@@ -66,6 +66,66 @@
                     </div>
                 </div>
             </section>
+            <section class="section">
+                <div class="container">
+                    <div class="headline">
+                        <h2 class="section__title headline__title">почему beats solo 3?</h2>
+                        <div class="headline__subtitle">Процессор W1 работает невероятно эффективно и позволяет легко 
+                            подключать наушники к различным устройствам Apple.</div>
+                    </div>
+
+                    <ul class="benefits">
+                        <li class="benefits__item benefit">
+                            <div class="benefit__image">
+                                <div class="benefit__image-wrapper">
+                                    <img src="./img/icons/capacity.svg" alt="battery capacity icon" class="benefit__icon">
+                                </div>
+                            </div>
+                            <div class="benefit__text">
+                                <h3 class="benefit__title">40 часов работы</h3>
+                                <div class="benefit__desc">
+                                    <p>
+                                        Наушники Beats Solo3 могут работать 
+                                        до 40 часов без подзарядки, чтобы вы 
+                                        могли пользоваться ими каждый день.
+                                    </p>
+                                </div>
+                            </div>
+                            <li class="benefits__item benefit">
+                                <div class="benefit__image">
+                                    <div class="benefit__image-wrapper">
+                                        <img src="./img/icons/speaker.svg" alt="battery capacity icon" class="benefit__icon">
+                                    </div>
+                                </div>
+                                <div class="benefit__text">
+                                    <h3 class="benefit__title">Фирменное звучание</h3>
+                                    <div class="benefit__desc">
+                                        <p>
+                                            Фирменное звучание Beats в наушниках 
+                                            с технологией Bluetooth класса 1 будет
+                                            сопровождать вас повсюду — куда бы вы ни отправились.
+                                        </p>
+                                    </div>
+                                </div>
+                                <li class="benefits__item benefit">
+                                    <div class="benefit__image">
+                                        <div class="benefit__image-wrapper">
+                                            <img src="./img/icons/stopwatch.png" alt="battery capacity icon" class="benefit__icon">
+                                        </div>
+                                    </div>
+                                    <div class="benefit__text">
+                                        <h3 class="benefit__title">Быстрая зарядка</h3>
+                                        <div class="benefit__desc">
+                                            <p>
+                                                Благодаря технологии Fast Fuel 
+                                                всего через 5 минут зарядки вы 
+                                                сможете слушать музыку ещё 3 часа.
+                                            </p>
+                                        </div>
+                                    </div>
+                    </ul>
+                </div>
+            </section>
             <div style="height: 600px"></div>
         </div>
     </div>
