--- a/index.html
+++ b/index.html
@@ -153,17 +153,17 @@
                         <ul class="reviews__switcher">
                             <li class="reviews__switcher-item iteractive-avatar">
                                 <a href="#" class="interactive-avatar__link">
-                                    <img src="/img/content/girl.jpg" alt="billie ailish" class="interactive-avatar__img">
+                                    <img src="./img/content/girl.jpg" alt="billie ailish" class="interactive-avatar__img">
                                 </a>
                             </li>
                             <li class="reviews__switcher-item iteractive-avatar">
                                 <a href="#" class="interactive-avatar__link">
-                                    <img src="/img/content/boy.jpg" alt="boy in a cap" class="interactive-avatar__img">
+                                    <img src="./img/content/boy.jpg" alt="boy in a cap" class="interactive-avatar__img">
                                 </a>
                             </li>
                             <li class="reviews__switcher-item iteractive-avatar">
                                 <a href="#" class="interactive-avatar__link">
-                                    <img src="/img/content/women.jpg" alt="woman behind forest" class="interactive-avatar__img">
+                                    <img src="./img/content/women.jpg" alt="woman behind forest" class="interactive-avatar__img">
                                 </a>
                             </li>
                         </ul>
