added style in reviews section

--- a/index.html
+++ b/index.html
@@ -151,17 +151,17 @@
                             </div>
                         </div>
                         <ul class="reviews__switcher">
-                            <li class="reviews__switcher-item iteractive-avatar">
+                            <li class="reviews__switcher-item interactive-avatar interactive-avatar--active">
                                 <a href="#" class="interactive-avatar__link">
                                     <img src="./img/content/girl.jpg" alt="billie ailish" class="interactive-avatar__img">
                                 </a>
                             </li>
-                            <li class="reviews__switcher-item iteractive-avatar">
+                            <li class="reviews__switcher-item interactive-avatar">
                                 <a href="#" class="interactive-avatar__link">
                                     <img src="./img/content/boy.jpg" alt="boy in a cap" class="interactive-avatar__img">
                                 </a>
                             </li>
-                            <li class="reviews__switcher-item iteractive-avatar">
+                            <li class="reviews__switcher-item interactive-avatar">
                                 <a href="#" class="interactive-avatar__link">
                                     <img src="./img/content/women.jpg" alt="woman behind forest" class="interactive-avatar__img">
                                 </a>
