styling order section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,15 @@
                     </div>
                 </div>
             </section>
-            <div style="height: 600px"></div>
+            <section class="section order__section">
+                <div class="container">
+                    <h2 class="section__title">доставка</h2>
+                    <div class="order">
+
+                    </div>
+                </div>
+            </section>
+            <!-- <div style="height: 600px"></div> -->
         </div>
     </div>
 </body>
