added order's page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=1000">
     <title>Beats Store</title>
     <link rel="stylesheet" href="css/main.css">
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section">
+            <section class="section benefits__section">
                 <div class="container">
                     <div class="headline">
                         <h2 class="section__title headline__title">почему beats solo 3?</h2>
@@ -126,7 +126,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="section">
+            <section class="section reviews__section">
                 <div class="container">
                     <h2 class="section__title">отзывы</h2>
                     <div class="reviews">
@@ -173,9 +173,73 @@
             <section class="section order__section">
                 <div class="container">
                     <h2 class="section__title">доставка</h2>
-                    <div class="order">
-
-                    </div>
+                        <form class="form">
+                            <div class="form__col">
+                                <div class="form__row">
+                                    <label class="form__block">
+                                        <div class="form__title">Имя</div>
+                                        <input type="text" class="form__input">
+                                    </label>
+                                    <label class="form__block">
+                                        <div class="form__title">Телефон</div>
+                                        <input type="text" class="form__input">
+                                    </label>
+                                </div>
+                                <div class="form__row">
+                                    <label class="form__block">
+                                        <div class="form__title">Улица</div>
+                                        <input type="text" class="form__input">
+                                    </label>
+                                </div>
+                                <div class="form__row">
+                                    <label class="form__block">
+                                        <div class="form__title">Дом</div>
+                                        <input type="text" class="form__input">
+                                    </label>
+                                    <label class="form__block">
+                                        <div class="form__title">Корпус</div>
+                                        <input type="text" class="form__input">
+                                    </label>
+                                    <label class="form__block">
+                                        <div class="form__title">Квартира</div>
+                                        <input type="text" class="form__input">
+                                    </label>
+                                    <label class="form__block">
+                                        <div class="form__title">Этаж</div>
+                                        <input type="text" class="form__input">
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form__col">
+                                <div class="form__row">
+                                    <label class="form__block">
+                                        <div class="form__title">Комментарий</div>
+                                        <textarea class="form__input form__input--textarea"></textarea>
+                                    </label>
+                                <div class="form__row">
+                                    <div class="form__controls">
+                                        <label class="radio">
+                                            <input type="radio" name="option" class="radio__elem">
+                                            <div class="radio__visible"></div>
+                                            <div class="radio__title">Потребуется сдач</div>
+                                        </label>
+                                        <label class="radio">
+                                            <input type="radio" name="option" class="radio__elem">
+                                            <div class="radio__visible"></div>
+                                            <div class="radio__title">Оплата картой</div>
+                                        </label>
+                                    </div>
+                                    <div class="from__controls">
+                                        <label class="radio radio--checkbox">
+                                            <input type="radio" class="radio__elem">
+                                            <div class="radio__visible"></div>
+                                            <div class="radio__title">Не перезванивать</div>
+                                        </label>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                        </form>
                 </div>
             </section>
             <!-- <div style="height: 600px"></div> -->
