--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             </div>
                             <div class="form__btns">
                                 <input type="submit" value="Заказать" class="btn btn--theme--red">
-                                <input type="submit" value="Очистить" class="btn">
+                                <input type="reset" value="Очистить" class="btn btn--theme--transparent">
                             </div>
                         </div>
                 </div>
@@ -258,6 +258,19 @@
         <!-- <div style="height: 600px"></div> -->
     </div>
     </div>
+    <nav class="fixed-menu">
+        <ul class="fixed-menu__list">
+            <li class="fixed-menu__item fixed-menu__item--active"><a href="#" class="fixed-menu__link"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+            <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+        </ul>
+    </nav>
 </body>
 
 </html>
