--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </section>
             <section class="section order__section">
                 <div class="container">
-                    <h2 class="section__title">доставка</h2>
+                    <h2 class="section__title">закажите доставку</h2>
                     <form class="form">
                         <div class="form__col">
                             <div class="form__row">
@@ -259,6 +259,59 @@
                 </div>
                 </form>
         </div>
+        </section>
+        <section class="section map-section">
+            <div class="map"></div>
+            <footer class="footer">
+                <div class="container footer__container">
+                    <address class="contacts">
+                      <div class="contacts__place">Москва, ул.Новый Арбат, д.31/12
+                      </div>
+      
+                      <a href="tel:+78009039090" class="phone-number footer__phone-number">
+                        <span class="phone-number__icon">
+                            <img src="./img/phone_red.svg" class="phone-number__icon-elem" alt="phone icon">
+                        </span>
+                        <span class="phone-number__text">8 800 903 90 90</span>
+                    </a>
+                    </address>
+                    <ul class="socials">
+                      <li class="socials__item">
+                        <a class="socials__link" href="#">
+                          <img
+                            src="./img/social/vk.svg"
+                            alt=""
+                            class="socials__icon"
+                          />
+                        </a>
+                        <a class="socials__link" href=""></a>
+                      </li>
+                      <li class="socials__item">
+                        <a class="socials__link" href="#">
+                          <img src="./img/social/f.svg" alt="" class="socials__icon" />
+                        </a>
+                      </li>
+                      <li class="socials__item">
+                        <a class="socials__link" href="#">
+                          <img
+                            src="./img/social/in.svg"
+                            alt=""
+                            class="socials__icon"
+                          />
+                        </a>
+                      </li>
+                      <li class="socials__item">
+                        <a class="socials__link" href="#">
+                          <img
+                            src="./img/social/tv.svg"
+                            alt=""
+                            class="socials__icon"
+                          />
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+            </footer>
         </section>
         <!-- <div style="height: 600px"></div> -->
     </div>
