--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                         </nav>
                         <a href="tel:+78009039090" class="phone-number header__phone-number">
                             <span class="phone-number__icon">
-                                <img src="./img/phone.svg" class="phone-number__icon-elem" alt="phone icon">
+                                <svg class="phone-number__icon-elem">
+                                    <use xlink:href="./img/sprite.svg#phone"></use>
+                                </svg>
                             </span>
                             <span class="phone-number__text">8 800 903 90 90</span>
                         </a>
@@ -93,8 +95,9 @@
                         <li class="benefits__item benefit">
                             <div class="benefit__image">
                                 <div class="benefit__image-wrapper">
-                                    <img src="./img/icons/capacity.svg" alt="battery capacity icon"
-                                        class="benefit__icon">
+                                    <svg class="benefit__icon">
+                                        <use xlink:href="./img/sprite.svg#capacity"></use>
+                                    </svg>
                                 </div>
                             </div>
                             <div class="benefit__text">
@@ -110,8 +113,9 @@
                         <li class="benefits__item benefit">
                             <div class="benefit__image">
                                 <div class="benefit__image-wrapper">
-                                    <img src="./img/icons/speaker.svg" alt="battery capacity icon"
-                                        class="benefit__icon">
+                                    <svg class="benefit__icon">
+                                        <use xlink:href="./img/sprite.svg#speaker"></use>
+                                    </svg>
                                 </div>
                             </div>
                             <div class="benefit__text">
@@ -127,8 +131,9 @@
                         <li class="benefits__item benefit">
                             <div class="benefit__image">
                                 <div class="benefit__image-wrapper">
-                                    <img src="./img/icons/stopwatch.png" alt="battery capacity icon"
-                                        class="benefit__icon">
+                                    <svg class="benefit__icon">
+                                        <use xlink:href="./img/sprite.svg#stopwatch"></use>
+                                    </svg>
                                 </div>
                             </div>
                             <div class="benefit__text">
@@ -277,7 +282,9 @@
       
                       <a href="tel:+78009039090" class="phone-number footer__phone-number">
                         <span class="phone-number__icon">
-                            <img src="./img/phone_red.svg" class="phone-number__icon-elem" alt="phone icon">
+                            <svg class="phone-number__icon-elem red__phone">
+                                <use xlink:href="./img/sprite.svg#phone"></use>
+                            </svg>
                         </span>
                         <span class="phone-number__text">8 800 903 90 90</span>
                     </a>
@@ -285,35 +292,31 @@
                     <ul class="socials">
                       <li class="socials__item">
                         <a class="socials__link" href="#">
-                          <img
-                            src="./img/social/vk.svg"
-                            alt=""
-                            class="socials__icon"
-                          />
+                            <svg class="socials__icon">
+                                <use xlink:href="./img/sprite.svg#vk"></use>
+                            </svg>
                         </a>
                         <a class="socials__link" href=""></a>
                       </li>
                       <li class="socials__item">
                         <a class="socials__link" href="#">
-                          <img src="./img/social/f.svg" alt="" class="socials__icon" />
+                            <svg class="socials__icon">
+                                <use xlink:href="./img/sprite.svg#f"></use>
+                            </svg>
                         </a>
                       </li>
                       <li class="socials__item">
                         <a class="socials__link" href="#">
-                          <img
-                            src="./img/social/in.svg"
-                            alt=""
-                            class="socials__icon"
-                          />
+                            <svg class="socials__icon">
+                                <use xlink:href="./img/sprite.svg#in"></use>
+                            </svg>
                         </a>
                       </li>
                       <li class="socials__item">
                         <a class="socials__link" href="#">
-                          <img
-                            src="./img/social/tv.svg"
-                            alt=""
-                            class="socials__icon"
-                          />
+                            <svg class="socials__icon">
+                                <use xlink:href="./img/sprite.svg#tv"></use>
+                            </svg>
                         </a>
                       </li>
                     </ul>
