added shop section

--- a/index.html
+++ b/index.html
@@ -144,6 +144,59 @@
                     </ul>
                 </div>
             </section>
+            
+            <section class="section shop__section">
+                <div class="container">
+                    <div class="slider">
+                        <a href="#" class="shop__left">left</a>
+                        <a href="#" class="shop__right">right</a>
+                    </div>
+                    <div class="shop">
+                        <div class="shop__col">
+                            <div class="shop-image-wrapper">
+                                <img src="./img/content/shop/silver.png" alt="headphone">
+                            </div>
+                        </div>
+                        <div class="shop__col">
+                            <div class="shop__row">
+                                <div class="shop__gears-wrapper">
+                                    <svg class="shop__gears">
+                                        <use xlink:href="./img/sprite.svg#gear"></use>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="shop__row">
+                                    <h3 class="shop__title">beats solo 3. цвет 
+                                        «атласное серебро»</h3>
+                            </div>
+                            <div class="shop__row">
+                                <div class="shop__text">
+                                    <p>Беспроводные наушники Beats Solo3 готовы к работе в любой момент. Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.</p>
+                                </div>
+                            </div>
+                            <div class="shop__row">
+                                    <div class="shop__feauter-charge">
+                                        <p class="feauter__title">Зарядка</p>
+                                        <h3 class="feauter__property">2 часа</h3>
+                                    </div>
+                                    <div class="shop__feauter-weight">
+                                        <p class="feauter__title">Вес</p>
+                                        <h3 class="feauter__property">215 грамм</h3>
+                                    </div>
+                            </div>
+                            <div class="shop__row">
+                                <div class="shop__amount">
+                                    <h3>14 990 ₽</h3>
+                                </div>
+                                <div class="shop__btn">
+                                    <input type="submit" value="Заказать" class="btn btn--theme--red">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <section class="section reviews__section">
                 <div class="container">
                     <h2 class="section__title">отзывы</h2>
@@ -262,7 +315,6 @@
                                 <input type="submit" value="Заказать" class="btn btn--theme--red">
                                 <input type="reset" value="Очистить" class="btn btn--theme--transparent">
                             </div>
-                        </div>
                 </div>
                 </form>
         </div>
