добавлен фулскрин меню

--- a/index.html
+++ b/index.html
@@ -386,11 +386,23 @@
             <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
         </ul>
     </nav>
-    <a href="" class="hamburger">
-        <span class="hamburger__plank"></span>
-        <span class="hamburger__plank"></span>
-        <span class="hamburger__plank"></span>
+    <a href="#" class="hamburger" onclick="myFunction(this)">
+        <span class="hamburger__plank plank1"></span>
+        <span class="hamburger__plank plank2"></span>
+        <span class="hamburger__plank plank3"></span>
     </a>
+    <nav class="menu-fullscreen">
+        <ul class="menu-fullscreen__list">
+            <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">О нас</a></li>
+            <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">Наушники</a></li>
+            <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">Команда</a></li>
+            <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">Цены</a></li>
+            <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">Отзывы</a></li>
+            <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">Как мы работаем</a></li>
+            <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">Контакты</a></li>
+        </ul>
+    </nav>
+    <script src="./index.js"></script>
 </body>
 
 </html>
