--- a/index.html
+++ b/index.html
@@ -148,8 +148,16 @@
             <section class="section shop__section">
                 <div class="container">
                     <div class="slider">
-                        <a href="#" class="shop__left">left</a>
-                        <a href="#" class="shop__right">right</a>
+                        <a href="#" class="shop__arrow--left shop__arrow">
+                            <!-- <svg class="arrow__icon">
+                                <use xlink:href="./img/sprite.svg#arrow"></use>
+                            </svg> -->
+                        </a>
+                        <a href="#" class="shop__arrow--right shop__arrow">
+                            <!-- <svg class="arrow__icon">
+                                <use xlink:href="./img/sprite.svg#arrow"></use>
+                            </svg> -->
+                        </a>
                     </div>
                     <div class="shop">
                         <div class="shop__col">
