add hover on dropdown for gear

--- a/index.html
+++ b/index.html
@@ -172,6 +172,45 @@
                                         <use xlink:href="./img/sprite.svg#gear"></use>
                                     </svg>
                                 </div>
+                                <div class="shop__gears-content">
+                                    <ul class="content__info">
+                                        <li class="gear__content">
+                                            <svg class="info__icon--icon">
+                                                <use xlink:href="./img/sprite.svg#bluetooth"></use>
+                                            </svg>
+                                            <div class="info__desc">Bluetooth</div>
+                                            <div class="info__prop">4.0</div>
+                                        </li>
+                                        <li class="gear__content">
+                                            <svg class="info__icon--icon">
+                                                <use xlink:href="./img/sprite.svg#range"></use>
+                                            </svg>
+                                            <div class="info__desc">Дальность</div>
+                                            <div class="info__prop">12 м</div>
+                                        </li>
+                                        <li class="gear__content">
+                                            <svg class="info__icon--icon">
+                                                <use xlink:href="./img/sprite.svg#charger"></use>
+                                            </svg>
+                                            <div class="info__desc">Зарядка</div>
+                                            <div class="info__prop">3 ч</div>
+                                        </li>
+                                        <li class="gear__content">
+                                            <svg class="info__icon--icon">
+                                                <use xlink:href="./img/sprite.svg#weigth"></use>
+                                            </svg>
+                                            <div class="info__desc">Вес</div>
+                                            <div class="info__prop">215гр</div>
+                                        </li>
+                                        <li class="gear__content">
+                                            <svg class="info__icon--icon">
+                                                <use xlink:href="./img/sprite.svg#warranty"></use>
+                                            </svg>
+                                            <div class="info__desc">Гарантия</div>
+                                            <div class="info__prop">1 год</div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="shop__row">
                                     <h3 class="shop__title">beats solo 3. цвет 
