--- a/index.html
+++ b/index.html
@@ -449,7 +449,8 @@
             <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">Контакты</a></li>
         </ul>
     </nav>
-    <script src="./index.js"></script>
+    <script src="./scr/jquery-3.6.0.min.js"></script>
+    <script src="./scr/index.js"></script>
 </body>
 
 </html>
