finish slider and shop section for tablets and phones

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                     <h3>14 990 ₽</h3>
                                 </div>
                                 <div class="shop__btn">
-                                    <input type="submit" value="Заказать" class="btn btn--theme--red">
+                                    <a href="#" class="btn btn--theme--red">Заказать</a>
                                 </div>
                             </div>
                         </div>
