add team section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Beats Store</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -243,7 +244,137 @@
                     </div>
                 </div>
             </section>
+            <section class="section team-section">
+                <div class="container">
+                    <div class="headline">
+                        <h2 class="section__title team-section__title">Команда</h2>
+                    </div>
+                    
+                    <ul class="team team--desktop">
+                        
+                        <li class="team__item">
+                            <div class="team__member">
+                                <img src="./img/team/men.png" alt="member men" class="team__member-img">
+                            </div>
+                            <button class="team__title" type="button">Борис Федорович</button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__spec">Главный технолог</div>
+                                    <div class="team__spec-text">Отвечает за вкусовые качества 
+                                        и калорийность.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
 
+                        <li class="team__item">
+                            <div class="team__member">
+                                <img src="./img/team/female_blonde.png" alt="member female" class="team__member-img">
+                            </div>
+                            <button class="team__title" type="button">Алла Иванова</button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__spec">Специалист по упаковке</div>
+                                    <div class="team__spec-text">Автор запоминающегося стиля 
+                                        наших батончиков.                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__member">
+                                <img src="./img/team/menWglasses.png" alt="member men" class="team__member-img">
+                            </div>
+                            <button class="team__title" type="button">Кирилл Матросов</button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__spec">Оператор</div>
+                                    <div class="team__spec-text">Разработал дизан
+                                        наушников beats solo 3.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__member">
+                                <img src="./img/team/female_brunette.png" alt="member female" class="team__member-img">
+                            </div>
+                            <button class="team__title" type="button">Мила Рыжкова</button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__spec">PR, маркетинг</div>
+                                    <div class="team__spec-text">По всем вопросам сотрудничества 
+                                        и рекламы писать только Миле.                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <!-- mobile  -->
+                    <ul class="team team--mobile">
+                        <li class="team__item">
+                            <button class="team__title" type="button">Борис Федорович</button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__member">
+                                        <img src="./img/team/men.png" alt="worker men" class="team__member-img">
+                                    </div>
+                                    <div class="team__spec">Главный технолог</div>
+                                    <div class="team__spec-text">Отвечает за вкусовые качества 
+                                        и калорийность.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="team__item">
+                            <button class="team__title" type="button">Алла Иванова</button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__member">
+                                        <img src="./img/team/female_blonde.png" alt="member female" class="team__member-img">
+                                    </div>
+                                    <div class="team__spec">Специалист по упаковке</div>
+                                    <div class="team__spec-text">Автор запоминающегося стиля 
+                                        наших батончиков.                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="team__item">
+                            <button class="team__title" type="button">Кирилл Матросов</button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__member">
+                                        <img src="./img/team/menWglasses.png" alt="worker men" class="team__member-img">
+                                    </div>
+                                    <div class="team__spec">Оператор</div>
+                                    <div class="team__spec-text">Разработал дизан
+                                        наушников beats solo 3.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="team__item">
+                            <button class="team__title" type="button">Мила Рыжкова</button>
+                            <div class="team__content">
+                                <div class="team__content-block">
+                                    <div class="team__member">
+                                        <img src="./img/team/female_brunette.png" alt="member female" class="team__member-img">
+                                    </div>
+                                    <div class="team__spec">PR, маркетинг</div>
+                                    <div class="team__spec-text">По всем вопросам сотрудничества 
+                                        и рекламы писать только Миле.                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+            </section>
             <section class="section reviews__section">
                 <div class="container">
                     <h2 class="section__title">отзывы</h2>
@@ -485,8 +616,13 @@
             <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">Контакты</a></li>
         </ul>
     </nav>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script src="./scr/jquery-3.6.0.min.js"></script>
-    <script src="./scr/index.js"></script>
+    <script src="./scr/team.js"></script>
+    <script src="./scr/slider.js"></script>
+    <!-- <script src="./scr/test.js"></script> -->
+    <script src="./scr/fullscreen.js"></script>
+    <script src="./scr/review.js"></script>
 </body>
 
 </html>
